--- a/lib/l10n/arb/app_es.arb
+++ b/lib/l10n/arb/app_es.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "very_good_coffee",
+  "appTitle": "Un muy buen café",
   "@appTitle": {
     "description": "El título de la aplicación"
   },
